--- a/appsettings.json
+++ b/appsettings.json
@@ -7,14 +7,18 @@
     "DefaultSubcategory": "Deployment",
     "DefaultPriority": "Medium"
   },
-  "GitHub": {
-    "Repository": "",
-    "Branch": ""
+  "Jira": {
+    "BaseUrl": "",
+    "ApiToken": "",
+    "Username": "",
+    "EnableDescriptionEnhancement": true,
+    "TimeoutSeconds": 30
   },
+  "KeyVault": "https://kv-changeomatic-snd.vault.azure.net",
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
-      "SolarWindsChangeCreator": "Information"
+      "ChangeRequesThor": "Information"
     }
   }
 }
